level_omega/css/dev.css
/* ... */
#main-content .node ul.internal-links,
#main-content .node ul.contact {
  display: block;
  clear: both;
  margin: 0;
  padding: 14px 0;
  list-style: none;
}
#main-content .node ul.internal-links li,
#main-content .node ul.contact li {
  list-style: none;
  display: inline;
  margin-right: 1.5em;
  /*text-transform: capitalize;*/
}

img.staff-doodle {
  position: absolute;
  bottom: 21px;
  right: 0;
  z-index: -1;
}

.node .even-row img.staff-doodle {
  position: absolute;
  bottom: 21px;
  left: 0;
  z-index: -1;
}

/* doodle images as bg */
#ceo .staff {
  background: transparent url(../node-images/team/ceo.jpg) 100% 100% no-repeat;
}
#cmo .staff {
  background: transparent url(../node-images/team/cmo.jpg) 0 100% no-repeat;
}
#cto .staff {
  background: transparent url(../node-images/team/cto.jpg) 100% 100% no-repeat;
}

#main-content .node .investors-images {
  width: 720px;
  margin: 10px -10px;
  padding: 21px 0 42px 0;
  background: transparent url(../images/shadow-700.jpg) 50% 100% no-repeat;
}

img#advisor-image {
  margin-bottom: 0;
}

.node .advisor {
  border-top: 1px dotted #666;
  padding-top: 21px;
}
.node .first-advisor {
  border-top: 0 none;
}

#main-content .node .investors-images a {
  width: 360px;
  float: left;
}

.node .investor {
  border-top: 1px dotted #666;
  padding-top: 21px;
}
.node .first-investor {
  border-top: 0 none;
  padding-top: 0;
}

body.not-front #main-content .investor .name {
  padding-bottom: 7px;
}

/* FAQs page */
#main-content .node ul.faq-list,
#main-content .node ul.faq-list li {
  list-style: none;
  padding-bottom: 7px;
}

#main-content .node ul.faq-list {
  margin-left: 10px;
  margin-right: 10px;
}

body.not-front #main-content .node h2.faq-title {
  font: bold 20px/1.25em Arial, sans-serif;
  border-top: 1px dotted #666;
  padding-top: 21px;
}

body.not-front #main-content .node h2.first-faq {
  border-top: 0 none;
}

/* Work with us page */
.node .section-wrapper {
  margin-bottom: 21px;
}

.node #work-with-us {
  background: transparent url(../node-images/work_with_us/work-environment.jpg) 100% 100% no-repeat;
}

body.not-front #main-content .node p.work-intro {
  font: normal 35px/1.25em Georgia, 'Adobe Garamond Pro', serif;
  letter-spacing: -1px;
}

body.not-front #main-content .node #work-with-us h3.recruit-title {
  padding-top: 14px;
}

#main-content .node ul.recruiting {
  border-top: 1px dotted #666;
}

#main-content .node ul.recruiting,
#main-content .node ul.recruiting li {
  list-style: none;
  margin-left: 0;
}

#main-content .node ul.recruiting li {
  display: block;
  margin: 0;
  padding: 0;
  text-transform: capitalize;
}

#main-content .node ul.recruiting li a {
  font: bold 20px/1em Arial, sans-serif;
  display: block;
  background: transparent url(../images/blue-arrow.gif) 100% 50% no-repeat;
  border-bottom: 1px dotted #666;
  padding: 14px 0;
}

#main-content .node .section-wrapper ul.contact {
  padding-bottom: 0;
}

body.not-front #main-content .node .section-wrapper h2 {
  padding-bottom: 0;
}

body.not-front #main-content .node .section-wrapper h3  {
  padding-top: 0;
}

/* images */
img.section-image {
  clear: both;
  margin-bottom: 42px;
}


/* misc */
body.not-front #main_wrapper,
body.not-front #main-content .node {
  background: transparent;
}

#top-bar {
  padding: 20px 0;
}

.page-faq #top_bar,
.page-team #top_bar,
.page-accounts-explained #top_bar,
.page-work #top_bar,
.page-work-development-manager #top_bar {
 float: right;
 padding: 20px 0;
 position: absolute;
 right: 0;
 top: 70px;
}

.page-faq h1#page-title,
.page-team h1#page-title,
.page-accounts-explained h1#page-title,
.page-work h1#page-title,
.page-work-development-manager h1#page-title {
  font: bold 20px/1em Arial, sans-serif;
  color: #333;
  text-align: right;
  float: right;
}

.hidden {
  display: none !important;
}

/* any_vote */
.block-any_vote {
  position: relative;
  width: 181px;
  min-height: 210px;
  padding: 10px 15px 15px 15px;
  margin: 20px 10px;
  float: left;
  /*background: #fff url(../images/bg-vote.gif) 50% 0 no-repeat;*/
  background: #f7f7f7;
  border: 1px solid #ddd;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
}

#block-any_vote-company_payment {
  margin-right: 0;
}

.block-any_vote h2 {
  font-size: 20px;
  color: #333;
  margin-bottom: 5px;
}

.block-any_vote .question {
  color: #333;
  font-size: 0.85em;
  line-height: 1.25em;
}

.block-any_vote .content {
  font-size: 0.85em;
  line-height: 1.25em;
}

/* has no vote */
.block_has_no_votes .content {
  color: #21a0e1;
  font-weight: bold;
}

/* company_payment */
#block-any_vote-company_payment .question {
  margin-bottom: 0;
}

#block-any_vote-company_payment .score {
  clear: both;
  position: relative;
}

#block-any_vote-company_payment .score img {
  width: 115px;
  height: 115px;
  float: left;
  background: transparent url(../images/empty-donut.gif) 50% 50% no-repeat;
}

#block-any_vote-company_payment .widget ul {
  float: right;
  margin: 10px 5px 0 0;
  padding: 0;
}
#block-any_vote-company_payment .widget li {
  margin: 15px 0 0 0;
}

#block-any_vote-company_payment .score .percentage {
  width: 115px;
  height: 15px;
  position: absolute;
  top: 0;
  left: 0;
  font-weight: bold;
  text-align: center;
  font-size: 15px;
  line-height: 15px;
  padding: 50px 0;
  color: #29B93C;
}

#block-any_vote-company_payment .content {
  clear: both;
  font-size: 0.85em;
  line-height: 1.25em;
}

/* options widget list */
.widget .any_vote_option_widget li a,
.widget .any_vote_option_widget li span {
  display: block;
  width: 60px;
  height: 14px;
  background: transparent url(../images/button-yes-no.gif) 0 50% no-repeat;
  text-align: center;
  text-transform: capitalize;
  font-weight: bold;
  font-size: 14px;
  line-height: 1em;
  padding: 4px 0 6px 0;
}

.widget .any_vote_option_widget li.first a,
.widget .any_vote_option_widget li.first span {
  color: #29B93C;
}
/* ... */

